--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="aspect-w-16 aspect-h-9 mb-12">
             <iframe 
-                src="https://cloud.onlinegames,io/games/2025/unity/monster-survivors/index-og.htm"
+                src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html"
                 class="w-full h-[600px] rounded-lg shadow-xl"
                 frameborder="0"
                 allowfullscreen>
