--- a/index.html
+++ b/index.html
@@ -4,78 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Survivors - Epic Survival Action Game</title>
-    <link rel="canonical" href="https://monstersurvivorsgame.site" />
-    <meta name="description" content="Play Monster Survivors, an intense survival action game where you fight endless waves of monsters while collecting power-ups and upgrading your character.">
+    <link rel="canonical" href="https://monstersurvivorsgame.com" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSRKH43WQ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-TDSRKH43WQ');
     </script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        :root {
-            --apple-blue: #007AFF;
-            --apple-gray: #8E8E93;
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-        }
-    </style>
 </head>
 <body class="bg-gray-50">
-    <main class="max-w-6xl mx-auto px-4 py-8">
-        <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-[#007AFF]">Monster Survivors</h1>
-        
-        <div class="text-xl text-center mb-8 text-gray-700">
-            Survive endless waves of monsters in this thrilling action-packed adventure!
-        </div>
+    <div class="max-w-6xl mx-auto px-4 py-8">
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4">Monster Survivors</h1>
+            <p class="text-xl text-gray-600">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
+        </header>
 
         <div class="aspect-w-16 aspect-h-9 mb-12">
             <iframe 
-                src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html"
-                class="w-full h-[600px] rounded-lg shadow-xl"
+                src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.htm"
+                class="w-full h-[600px] rounded-lg shadow-lg"
                 frameborder="0"
-                allowfullscreen>
-            </iframe>
+                allowfullscreen
+            ></iframe>
         </div>
 
-        <section class="grid md:grid-cols-2 gap-8 mb-12">
-            <div class="bg-white p-6 rounded-xl shadow-md">
-                <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">Game Features</h2>
-                <ul class="space-y-2 text-gray-700">
-                    <li>• Endless survival gameplay</li>
-                    <li>• Multiple character upgrades</li>
-                    <li>• Dynamic monster waves</li>
-                    <li>• Power-up collection system</li>
-                </ul>
-            </div>
+        <section class="prose lg:prose-xl mx-auto">
+            <h2 class="text-2xl md:text-3xl font-semibold text-gray-800 mb-4">Game Overview</h2>
+            <p class="text-gray-600 mb-6">
+                Monster Survivors is an intense survival action game where you must fight against hordes of monsters. 
+                Test your skills and strategy as you progress through increasingly challenging waves of enemies.
+            </p>
 
-            <div class="bg-white p-6 rounded-xl shadow-md">
-                <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">How to Play</h2>
-                <ul class="space-y-2 text-gray-700">
-                    <li>• Use WASD or arrow keys to move</li>
-                    <li>• Collect experience orbs to level up</li>
-                    <li>• Choose upgrades wisely</li>
-                    <li>• Survive as long as possible</li>
-                </ul>
-            </div>
-        </section>
+            <h2 class="text-2xl md:text-3xl font-semibold text-gray-800 mb-4">Key Features</h2>
+            <ul class="list-disc list-inside text-gray-600 mb-6">
+                <li>Endless survival gameplay</li>
+                <li>Multiple character abilities</li>
+                <li>Progressive difficulty system</li>
+                <li>Dynamic monster AI</li>
+                <li>Engaging power-ups and upgrades</li>
+            </ul>
 
-        <section class="bg-white p-8 rounded-xl shadow-md mb-12">
-            <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">About Monster Survivors</h2>
-            <p class="text-gray-700 leading-relaxed">
-                Monster Survivors is an intense survival action game that puts your skills to the test. Face increasingly challenging waves of monsters while collecting power-ups and upgrading your character. With its roguelike elements and permanent progression system, each run offers a unique experience. Can you survive long enough to become the ultimate monster slayer?
+            <h2 class="text-2xl md:text-3xl font-semibold text-gray-800 mb-4">How to Play</h2>
+            <p class="text-gray-600 mb-6">
+                Use WASD or arrow keys to move your character. Avoid monsters while collecting power-ups and experience points to become stronger. 
+                Survive as long as possible and aim for the highest score!
             </p>
         </section>
-    </main>
+    </div>
 
-    <footer class="bg-gray-100 py-6">
+    <footer class="bg-gray-100 mt-12 py-6">
         <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
-            <p>© 2024 Monster Survivors. All rights reserved.</p>
+            <p>&copy; 2024 Monster Survivors. All rights reserved.</p>
         </div>
     </footer>
 </body>
