--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Survivors - Epic Survival Action Game</title>
-    <link rel="canonical" href="https://monstersurvivorsgame.com" />
+    <link rel="canonical" href="https://monstersurvivorsgame.site" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSRKH43WQ"></script>
@@ -17,48 +17,48 @@
 </head>
 <body class="bg-gray-50">
     <div class="max-w-6xl mx-auto px-4 py-8">
-        <header class="text-center mb-12">
-            <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4">Monster Survivors</h1>
-            <p class="text-xl text-gray-600">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
-        </header>
-
-        <div class="aspect-w-16 aspect-h-9 mb-12">
-            <iframe 
-                src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.htm"
-                class="w-full h-[600px] rounded-lg shadow-lg"
-                frameborder="0"
-                allowfullscreen
-            ></iframe>
+        <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4 text-center">Monster Survivors</h1>
+        <p class="text-xl text-gray-600 text-center mb-8">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
+        
+        <div class="aspect-w-16 aspect-h-9 mb-8">
+            <iframe src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.htm" 
+                    class="w-full h-[600px] rounded-lg shadow-lg"
+                    frameborder="0"
+                    allowfullscreen></iframe>
         </div>
 
-        <section class="prose lg:prose-xl mx-auto">
-            <h2 class="text-2xl md:text-3xl font-semibold text-gray-800 mb-4">Game Overview</h2>
-            <p class="text-gray-600 mb-6">
-                Monster Survivors is an intense survival action game where you must fight against hordes of monsters. 
-                Test your skills and strategy as you progress through increasingly challenging waves of enemies.
-            </p>
+        <div class="grid md:grid-cols-2 gap-8">
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Game Features</h2>
+                <ul class="space-y-2 text-gray-600">
+                    <li>• Endless survival gameplay</li>
+                    <li>• Multiple character choices</li>
+                    <li>• Unique power-ups and abilities</li>
+                    <li>• Progressive difficulty system</li>
+                </ul>
+            </div>
 
-            <h2 class="text-2xl md:text-3xl font-semibold text-gray-800 mb-4">Key Features</h2>
-            <ul class="list-disc list-inside text-gray-600 mb-6">
-                <li>Endless survival gameplay</li>
-                <li>Multiple character abilities</li>
-                <li>Progressive difficulty system</li>
-                <li>Dynamic monster AI</li>
-                <li>Engaging power-ups and upgrades</li>
-            </ul>
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4">How to Play</h2>
+                <ul class="space-y-2 text-gray-600">
+                    <li>• Use WASD or arrow keys to move</li>
+                    <li>• Collect experience to level up</li>
+                    <li>• Choose upgrades wisely</li>
+                    <li>• Survive as long as possible</li>
+                </ul>
+            </div>
+        </div>
 
-            <h2 class="text-2xl md:text-3xl font-semibold text-gray-800 mb-4">How to Play</h2>
-            <p class="text-gray-600 mb-6">
-                Use WASD or arrow keys to move your character. Avoid monsters while collecting power-ups and experience points to become stronger. 
-                Survive as long as possible and aim for the highest score!
+        <div class="mt-8 bg-white p-6 rounded-lg shadow">
+            <h2 class="text-2xl font-semibold text-gray-800 mb-4">About Monster Survivors</h2>
+            <p class="text-gray-600">
+                Monster Survivors is an exciting survival action game where players must face waves of increasingly difficult monsters. 
+                With its roguelike elements and permanent progression system, each run offers a unique experience. 
+                Choose your character, collect power-ups, and see how long you can survive in this challenging adventure.
             </p>
-        </section>
+        </div>
     </div>
-
-    <footer class="bg-gray-100 mt-12 py-6">
-        <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
-            <p>&copy; 2024 Monster Survivors. All rights reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
+
+
