--- a/index.html
+++ b/index.html
@@ -6,59 +6,71 @@
     <title>Monster Survivors - Epic Survival Action Game</title>
     <link rel="canonical" href="https://monstersurvivorsgame.site" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSRKH43WQ"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-TDSRKH43WQ');
-    </script>
+    <style>
+        :root {
+            --apple-blue: #007AFF;
+            --apple-gray: #8E8E93;
+        }
+    </style>
 </head>
-<body class="bg-gray-50">
-    <div class="max-w-6xl mx-auto px-4 py-8">
-        <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4 text-center">Monster Survivors</h1>
-        <p class="text-xl text-gray-600 text-center mb-8">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
+<body class="bg-gray-50 font-sans">
+    <main class="max-w-6xl mx-auto px-4 py-8">
+        <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-gray-900">
+            Monster Survivors
+        </h1>
         
-        <div class="aspect-w-16 aspect-h-9 mb-8">
-            <iframe src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.htm" 
-                    class="w-full h-[600px] rounded-lg shadow-lg"
-                    frameborder="0"
-                    allowfullscreen></iframe>
+        <div class="text-xl text-center mb-8 text-[--apple-blue]">
+            Survive endless waves of monsters in this thrilling action-packed adventure
         </div>
 
-        <div class="grid md:grid-cols-2 gap-8">
-            <div class="bg-white p-6 rounded-lg shadow">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Game Features</h2>
+        <div class="aspect-w-16 aspect-h-9 mb-10">
+            <iframe 
+                src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.htm"
+                class="w-full h-[600px] rounded-lg shadow-lg"
+                allowfullscreen
+            ></iframe>
+        </div>
+
+        <section class="grid md:grid-cols-2 gap-8 mb-12">
+            <div>
+                <h2 class="text-2xl font-semibold mb-4 text-gray-800">
+                    Game Features
+                </h2>
                 <ul class="space-y-2 text-gray-600">
-                    <li>• Endless survival gameplay</li>
+                    <li>• Dynamic combat system</li>
                     <li>• Multiple character choices</li>
-                    <li>• Unique power-ups and abilities</li>
-                    <li>• Progressive difficulty system</li>
+                    <li>• Endless gameplay mechanics</li>
+                    <li>• Progressive difficulty scaling</li>
                 </ul>
             </div>
 
-            <div class="bg-white p-6 rounded-lg shadow">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">How to Play</h2>
+            <div>
+                <h2 class="text-2xl font-semibold mb-4 text-gray-800">
+                    How to Play
+                </h2>
                 <ul class="space-y-2 text-gray-600">
                     <li>• Use WASD or arrow keys to move</li>
-                    <li>• Collect experience to level up</li>
-                    <li>• Choose upgrades wisely</li>
+                    <li>• Collect power-ups to become stronger</li>
+                    <li>• Defeat monsters to earn points</li>
                     <li>• Survive as long as possible</li>
                 </ul>
             </div>
-        </div>
+        </section>
 
-        <div class="mt-8 bg-white p-6 rounded-lg shadow">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4">About Monster Survivors</h2>
-            <p class="text-gray-600">
-                Monster Survivors is an exciting survival action game where players must face waves of increasingly difficult monsters. 
-                With its roguelike elements and permanent progression system, each run offers a unique experience. 
-                Choose your character, collect power-ups, and see how long you can survive in this challenging adventure.
+        <section class="mb-12">
+            <h2 class="text-2xl font-semibold mb-4 text-gray-800">
+                About Monster Survivors
+            </h2>
+            <p class="text-gray-600 leading-relaxed">
+                Monster Survivors is an intense survival action game where players face waves of increasingly challenging monsters. With its roguelike elements and strategic gameplay, every session offers a unique experience. Level up your character, unlock new abilities, and see how long you can survive in this addictive game.
             </p>
+        </section>
+    </main>
+
+    <footer class="bg-gray-100 py-6">
+        <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
+            <p>© 2024 Monster Survivors. All rights reserved.</p>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
-
-
