--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Survivors - Epic Survival Action Game</title>
     <link rel="canonical" href="https://monstersurvivorsgame.site" />
-    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSRKH43WQ"></script>
     <script>
@@ -14,46 +13,58 @@
         gtag('js', new Date());
         gtag('config', 'G-TDSRKH43WQ');
     </script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        :root {
+            --apple-blue: #007AFF;
+            --apple-gray: #8E8E93;
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        }
+    </style>
 </head>
 <body class="bg-gray-50">
     <div class="max-w-6xl mx-auto px-4 py-8">
-        <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4 text-center">Monster Survivors</h1>
-        <p class="text-xl text-gray-600 text-center mb-8">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
-        
+        <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-[#1D1D1F]">Monster Survivors</h1>
+        <p class="text-xl text-center mb-8 text-[#86868B]">Survive endless waves of monsters in this thrilling action-packed adventure game!</p>
+
         <div class="aspect-w-16 aspect-h-9 mb-8">
-            <iframe src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.htm" 
+            <iframe src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og,html" 
                     class="w-full h-[600px] rounded-lg shadow-lg"
                     frameborder="0"
                     allowfullscreen></iframe>
         </div>
 
-        <div class="space-y-8">
-            <section>
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Game Overview</h2>
-                <p class="text-gray-600">Monster Survivors is an intense survival action game where you must fight against hordes of monsters. Test your skills and strategy as you progress through increasingly challenging waves of enemies.</p>
-            </section>
-
-            <section>
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Key Features</h2>
-                <ul class="list-disc list-inside text-gray-600 space-y-2">
-                    <li>Endless survival gameplay</li>
-                    <li>Multiple character abilities</li>
-                    <li>Progressive difficulty system</li>
-                    <li>Dynamic combat mechanics</li>
+        <div class="grid md:grid-cols-2 gap-8 mt-12">
+            <div>
+                <h2 class="text-2xl font-semibold mb-4 text-[#1D1D1F]">Game Features</h2>
+                <ul class="space-y-3 text-[#86868B]">
+                    <li>• Intense survival gameplay</li>
+                    <li>• Multiple character choices</li>
+                    <li>• Unique power-ups and abilities</li>
+                    <li>• Progressive difficulty system</li>
                 </ul>
-            </section>
+            </div>
 
-            <section>
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">How to Play</h2>
-                <p class="text-gray-600">Use WASD or arrow keys to move your character. Collect power-ups and defeat monsters to earn points. Survive as long as possible while facing increasingly difficult challenges.</p>
-            </section>
+            <div>
+                <h2 class="text-2xl font-semibold mb-4 text-[#1D1D1F]">How to Play</h2>
+                <ul class="space-y-3 text-[#86868B]">
+                    <li>• Use WASD or arrow keys to move</li>
+                    <li>• Collect experience points to level up</li>
+                    <li>• Choose upgrades wisely</li>
+                    <li>• Survive as long as possible</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="mt-12">
+            <h2 class="text-2xl font-semibold mb-4 text-[#1D1D1F]">Game Description</h2>
+            <p class="text-[#86868B] leading-relaxed">
+                Monster Survivors is an action-packed survival game where your goal is to stay alive as long as possible while facing endless waves of monsters. Level up your character, unlock powerful abilities, and test your skills against increasingly challenging enemies. With its roguelike elements and permanent progression system, every run is a unique experience that will keep you coming back for more.
+            </p>
         </div>
     </div>
-
-    <footer class="bg-gray-100 mt-12 py-6">
-        <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
-            <p>&copy; 2024 Monster Survivors. All rights reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
+
