--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Survivors - Epic Survival Action Game</title>
     <link rel="canonical" href="https://monstersurvivorsgame.site" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSRKH43WQ"></script>
     <script>
@@ -13,58 +14,60 @@
         gtag('js', new Date());
         gtag('config', 'G-TDSRKH43WQ');
     </script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        :root {
-            --apple-blue: #007AFF;
-            --apple-gray: #8E8E93;
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-        }
-    </style>
 </head>
 <body class="bg-gray-50">
     <div class="max-w-6xl mx-auto px-4 py-8">
-        <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-[#1D1D1F]">Monster Survivors</h1>
-        <p class="text-xl text-center mb-8 text-[#86868B]">Survive endless waves of monsters in this thrilling action-packed adventure game!</p>
+        <h1 class="text-4xl md:text-5xl font-bold text-gray-900 text-center mb-4">
+            Monster Survivors
+        </h1>
+        
+        <p class="text-xl text-gray-700 text-center mb-8">
+            Survive endless waves of monsters in this thrilling action-packed adventure game!
+        </p>
 
         <div class="aspect-w-16 aspect-h-9 mb-8">
-            <iframe src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og,html" 
-                    class="w-full h-[600px] rounded-lg shadow-lg"
-                    frameborder="0"
-                    allowfullscreen></iframe>
+            <iframe 
+                src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html"
+                class="w-full h-[600px] rounded-lg shadow-lg"
+                frameborder="0"
+                allowfullscreen
+            ></iframe>
         </div>
 
-        <div class="grid md:grid-cols-2 gap-8 mt-12">
-            <div>
-                <h2 class="text-2xl font-semibold mb-4 text-[#1D1D1F]">Game Features</h2>
-                <ul class="space-y-3 text-[#86868B]">
-                    <li>• Intense survival gameplay</li>
-                    <li>• Multiple character choices</li>
-                    <li>• Unique power-ups and abilities</li>
-                    <li>• Progressive difficulty system</li>
+        <div class="grid md:grid-cols-2 gap-8">
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h2 class="text-2xl font-semibold text-gray-900 mb-4">
+                    Game Features
+                </h2>
+                <ul class="list-disc list-inside text-gray-700 space-y-2">
+                    <li>Intense survival gameplay</li>
+                    <li>Multiple character choices</li>
+                    <li>Unique power-ups and abilities</li>
+                    <li>Progressive difficulty system</li>
                 </ul>
             </div>
 
-            <div>
-                <h2 class="text-2xl font-semibold mb-4 text-[#1D1D1F]">How to Play</h2>
-                <ul class="space-y-3 text-[#86868B]">
-                    <li>• Use WASD or arrow keys to move</li>
-                    <li>• Collect experience points to level up</li>
-                    <li>• Choose upgrades wisely</li>
-                    <li>• Survive as long as possible</li>
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h2 class="text-2xl font-semibold text-gray-900 mb-4">
+                    How to Play
+                </h2>
+                <ul class="list-disc list-inside text-gray-700 space-y-2">
+                    <li>Use WASD or arrow keys to move</li>
+                    <li>Collect experience to level up</li>
+                    <li>Choose upgrades wisely</li>
+                    <li>Survive as long as possible</li>
                 </ul>
             </div>
         </div>
 
-        <div class="mt-12">
-            <h2 class="text-2xl font-semibold mb-4 text-[#1D1D1F]">Game Description</h2>
-            <p class="text-[#86868B] leading-relaxed">
-                Monster Survivors is an action-packed survival game where your goal is to stay alive as long as possible while facing endless waves of monsters. Level up your character, unlock powerful abilities, and test your skills against increasingly challenging enemies. With its roguelike elements and permanent progression system, every run is a unique experience that will keep you coming back for more.
+        <div class="mt-8">
+            <h2 class="text-2xl font-semibold text-gray-900 mb-4">
+                About Monster Survivors
+            </h2>
+            <p class="text-gray-700 leading-relaxed">
+                Monster Survivors is an exciting survival action game where players must face waves of increasingly difficult monsters. With its roguelike elements and RPG progression system, each playthrough offers a unique experience. Choose your character, collect power-ups, and see how long you can survive in this challenging adventure!
             </p>
         </div>
     </div>
 </body>
 </html>
-
