--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
 </head>
 <body class="bg-gray-50">
     <div class="max-w-6xl mx-auto px-4 py-8">
-        <h1 class="text-4xl md:text-5xl font-bold text-gray-900 text-center mb-4">
-            Monster Survivors
-        </h1>
-        
-        <p class="text-xl text-gray-700 text-center mb-8">
-            Survive endless waves of monsters in this thrilling action-packed adventure game!
-        </p>
+        <header class="text-center mb-12">
+            <h1 class="text-4xl md:text-6xl font-bold text-gray-900 mb-4">Monster Survivors</h1>
+            <p class="text-xl text-gray-600">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
+        </header>
 
-        <div class="aspect-w-16 aspect-h-9 mb-8">
+        <div class="aspect-w-16 aspect-h-9 mb-12">
             <iframe 
                 src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html"
                 class="w-full h-[600px] rounded-lg shadow-lg"
@@ -34,40 +31,39 @@
             ></iframe>
         </div>
 
-        <div class="grid md:grid-cols-2 gap-8">
+        <section class="grid md:grid-cols-2 gap-8 mb-12">
             <div class="bg-white p-6 rounded-lg shadow">
-                <h2 class="text-2xl font-semibold text-gray-900 mb-4">
-                    Game Features
-                </h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li>Intense survival gameplay</li>
-                    <li>Multiple character choices</li>
-                    <li>Unique power-ups and abilities</li>
-                    <li>Progressive difficulty system</li>
+                <h2 class="text-2xl font-bold text-gray-900 mb-4">Game Features</h2>
+                <ul class="space-y-2 text-gray-600">
+                    <li>• Endless survival gameplay</li>
+                    <li>• Multiple character choices</li>
+                    <li>• Unique power-ups and abilities</li>
+                    <li>• Progressive difficulty system</li>
                 </ul>
             </div>
 
             <div class="bg-white p-6 rounded-lg shadow">
-                <h2 class="text-2xl font-semibold text-gray-900 mb-4">
-                    How to Play
-                </h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li>Use WASD or arrow keys to move</li>
-                    <li>Collect experience to level up</li>
-                    <li>Choose upgrades wisely</li>
-                    <li>Survive as long as possible</li>
+                <h2 class="text-2xl font-bold text-gray-900 mb-4">How to Play</h2>
+                <ul class="space-y-2 text-gray-600">
+                    <li>• Use WASD or arrow keys to move</li>
+                    <li>• Collect experience orbs to level up</li>
+                    <li>• Choose upgrades wisely</li>
+                    <li>• Survive as long as possible</li>
                 </ul>
             </div>
-        </div>
+        </section>
 
-        <div class="mt-8">
-            <h2 class="text-2xl font-semibold text-gray-900 mb-4">
-                About Monster Survivors
-            </h2>
-            <p class="text-gray-700 leading-relaxed">
-                Monster Survivors is an exciting survival action game where players must face waves of increasingly difficult monsters. With its roguelike elements and RPG progression system, each playthrough offers a unique experience. Choose your character, collect power-ups, and see how long you can survive in this challenging adventure!
+        <section class="bg-white p-6 rounded-lg shadow mb-12">
+            <h2 class="text-2xl font-bold text-gray-900 mb-4">About Monster Survivors</h2>
+            <p class="text-gray-600 leading-relaxed">
+                Monster Survivors is an intense survival action game where players must face waves of increasingly difficult monsters. 
+                With its roguelike elements and permanent progression system, each run offers a unique experience. 
+                Choose your character, develop your build, and see how long you can survive in this challenging adventure.
             </p>
-        </div>
+        </section>
     </div>
 </body>
 </html>
+
+
+
