--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         gtag('config', 'G-TDSRKH43WQ');
     </script>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-100">
     <div class="max-w-6xl mx-auto px-4 py-8">
         <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4 text-center">Monster Survivors</h1>
-        <p class="text-xl text-gray-600 text-center mb-8">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
+        <p class="text-xl text-gray-700 text-center mb-8">Survive endless waves of monsters in this thrilling action-packed adventure!</p>
         
         <div class="aspect-w-16 aspect-h-9 mb-8">
             <iframe src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html" 
@@ -27,31 +27,43 @@
                     allowfullscreen></iframe>
         </div>
 
-        <div class="prose max-w-none">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4">Game Overview</h2>
-            <p class="text-gray-600 mb-6">Monster Survivors is an intense survival action game where you must fight against hordes of monsters. Level up, collect powerful abilities, and see how long you can survive in this challenging adventure.</p>
+        <div class="grid md:grid-cols-2 gap-8">
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h2 class="text-2xl font-bold text-gray-900 mb-4">Game Features</h2>
+                <ul class="list-disc list-inside text-gray-700 space-y-2">
+                    <li>Intense survival gameplay</li>
+                    <li>Multiple character choices</li>
+                    <li>Unique power-ups and abilities</li>
+                    <li>Progressive difficulty system</li>
+                    <li>Endless gameplay possibilities</li>
+                </ul>
+            </div>
 
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4">Key Features</h2>
-            <ul class="list-disc pl-6 text-gray-600 mb-6">
-                <li>Endless survival gameplay</li>
-                <li>Multiple character abilities</li>
-                <li>Progressive difficulty system</li>
-                <li>Dynamic combat mechanics</li>
-                <li>Unique power-ups and upgrades</li>
-            </ul>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h2 class="text-2xl font-bold text-gray-900 mb-4">How to Play</h2>
+                <ul class="list-disc list-inside text-gray-700 space-y-2">
+                    <li>Use WASD or arrow keys to move</li>
+                    <li>Automatically attack nearby enemies</li>
+                    <li>Collect experience orbs to level up</li>
+                    <li>Choose power-ups wisely</li>
+                    <li>Survive as long as possible!</li>
+                </ul>
+            </div>
+        </div>
 
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4">How to Play</h2>
-            <p class="text-gray-600 mb-6">Use WASD or arrow keys to move your character. Automatically attack nearby enemies and collect experience orbs to level up. Choose new abilities as you progress and try to survive as long as possible!</p>
+        <div class="mt-8 bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-2xl font-bold text-gray-900 mb-4">About Monster Survivors</h2>
+            <p class="text-gray-700 leading-relaxed">
+                Monster Survivors is an exciting survival action game where players must face endless waves of monsters. 
+                With its roguelike elements and progressive difficulty system, each playthrough offers a unique experience. 
+                Choose your character, develop your abilities, and see how long you can survive in this challenging adventure.
+                Perfect for both casual gamers and hardcore players looking for an intense gaming experience.
+            </p>
         </div>
     </div>
-
-    <footer class="bg-gray-100 mt-12 py-6">
-        <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
-            <p>&copy; 2024 Monster Survivors. All rights reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
+
 
 
 
