--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monster Survivors - Epic Survival Action Game</title>
+    <title>Monster Survivors - Thrilling Online Survival Game</title>
     <link rel="canonical" href="https://monstersurvivorsgame.site" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDSRKH43WQ"></script>
@@ -20,64 +20,59 @@
             --apple-gray: #8E8E93;
             --apple-green: #34C759;
         }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-        }
     </style>
 </head>
 <body class="bg-gray-50">
-    <main class="max-w-4xl mx-auto px-4 py-8">
-        <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-[#007AFF]">
-            Monster Survivors
-        </h1>
+    <div class="max-w-6xl mx-auto px-4 py-8">
+        <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-[#007AFF]">Monster Survivors</h1>
         
-        <div class="text-xl text-center mb-8 text-gray-700">
-            Survive endless waves of monsters in this thrilling action-packed adventure!
+        <div class="text-xl text-center mb-8 text-[#8E8E93]">
+            Survive endless waves of monsters in this thrilling action-packed adventure game!
         </div>
 
-        <div class="relative w-full aspect-video mb-8 rounded-lg overflow-hidden shadow-xl">
+        <div class="aspect-w-16 aspect-h-9 mb-8">
             <iframe 
                 src="https://cloud.onlinegames.io/games/2025/unity/monster-survivors/index-og.html"
-                class="absolute top-0 left-0 w-full h-full border-0"
-                allowfullscreen
-            ></iframe>
+                class="w-full h-[600px] rounded-lg shadow-lg"
+                frameborder="0"
+                allowfullscreen>
+            </iframe>
         </div>
 
-        <section class="space-y-8">
-            <div>
-                <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">Game Overview</h2>
-                <p class="text-gray-700 leading-relaxed">
-                    Monster Survivors is an intense survival action game where you must fight against endless hordes of monsters. Use your skills and strategy to survive as long as possible while collecting power-ups and defeating increasingly challenging enemies.
-                </p>
-            </div>
-
-            <div>
-                <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">How to Play</h2>
-                <p class="text-gray-700 leading-relaxed">
-                    Use WASD or arrow keys to move your character. Automatically attack nearby enemies and collect experience orbs to level up. Choose powerful upgrades and create the ultimate build to survive longer.
-                </p>
-            </div>
-
-            <div>
-                <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">Features</h2>
-                <ul class="list-disc list-inside text-gray-700 space-y-2">
-                    <li>Endless survival gameplay</li>
-                    <li>Multiple character abilities and upgrades</li>
-                    <li>Progressive difficulty system</li>
-                    <li>Various enemy types and boss battles</li>
-                    <li>Engaging power-up mechanics</li>
+        <div class="grid md:grid-cols-2 gap-8 mt-12">
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">Game Features</h2>
+                <ul class="space-y-2 text-[#8E8E93]">
+                    <li>• Endless survival gameplay</li>
+                    <li>• Multiple character choices</li>
+                    <li>• Unique power-ups and abilities</li>
+                    <li>• Progressive difficulty system</li>
                 </ul>
             </div>
-        </section>
-    </main>
 
-    <footer class="text-center py-6 text-gray-600 text-sm">
-        <p>© 2024 Monster Survivors. All rights reserved.</p>
-    </footer>
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">How to Play</h2>
+                <ul class="space-y-2 text-[#8E8E93]">
+                    <li>• Use WASD or arrow keys to move</li>
+                    <li>• Collect experience points to level up</li>
+                    <li>• Choose upgrades wisely</li>
+                    <li>• Survive as long as possible</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="mt-12">
+            <h2 class="text-2xl font-semibold mb-4 text-[#007AFF]">Game Description</h2>
+            <p class="text-[#8E8E93] leading-relaxed">
+                Monster Survivors is an intense survival action game where players must face endless waves of monsters. 
+                Choose your character, collect power-ups, and upgrade your abilities as you progress through increasingly 
+                challenging levels. With its roguelike elements and permanent progression system, each playthrough offers 
+                a unique experience. Can you survive the monster apocalypse?
+            </p>
+        </div>
+    </div>
 </body>
 </html>
-
-
 
 
 
